Added get all question types endpoint
